--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slint = "1.10.0"
-serde_json ="1.0.140"
+slint = "1.11.0"
+serde = { version = "1.0.140", features = ["derive"] }
+serde_json = "1.0.140"
 
 [build-dependencies]
-slint-build = "1.10.0"
+slint-build = "1.11.0"
