--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ serde_json = "1.0.140"
 [build-dependencies]
 slint-build = "1.11.0"
  
+[dependencies.uuid]
+version = "1.16.0"
+# Lets you generate random UUIDs
+features = [
+    "v4",
+]
