--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 slint = "1.11.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.140"
+chrono = "0.4.41"
+ 
 
 [build-dependencies]
 slint-build = "1.11.0"
