--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ slint = "1.11.0"
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.140"
 chrono = "0.4.41"
+i-slint-backend-winit = "1.11.0"
  
 
 [build-dependencies]
