--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.140"
 chrono = "0.4.41"
 i-slint-backend-winit = "1.11.0"
- 
+dotenv = "0.15"
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 
 [build-dependencies]
 slint-build = "1.11.0"
